<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/login_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                tools:visibility="gone">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logging_in"
                    android:textSize="20sp"/>

            <ProgressBar
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:indeterminate="true"
                    android:indeterminateOnly="true"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/user_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

            <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/library_item_type_select_title"/>

            <Button
                    android:id="@+id/button_songs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_song"/>

            <Button
                    android:id="@+id/button_albums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album"/>

            <Button
                    android:id="@+id/button_playlists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist"/>

        </LinearLayout>

    </FrameLayout>

</layout>