<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

        <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/select_media"/>

        <Button
                android:id="@+id/button_from_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_from_library"/>

        <Button
                android:id="@+id/button_from_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_from_url"/>
    </LinearLayout>
</layout>